--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,7 @@
-*.pyc
-*.pyo
-*.tmp*
-*.mo
-*.egg
-*.EGG
-*.egg-info
-*.EGG-INFO
-.*.cfg
-bin/
-build/
-develop-eggs/
-downloads/
-eggs/
-fake-eggs/
-parts/
-dist/
-var/
+*.log
+*.c
+*.php
+*.html
+*.sh
+*.pyzw
+.github
